--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
                 <div><img src="imgs/a.png" width="30 px" height="30px"></div>
                 <div><img src="imgs/gv.png" width="30 px" height="30px"></div>
                 <div><img src="imgs/logo+incones.png" width="30 px" height="30px"></div>
-                <div><img src="imgs/s.png" width="30 px" height="30px"></div>
+                <div><img src="imgs/s.png" width="30px" height="30px"></div>
                 <div>OFERTAS</div>
-                <div>PRODUTOS</div>
-                <div>HOME</div>
-                <div id="icon"><img src="imgs/360x600.png" width="70 px" height="40px"></div>
+                <div><a href="produtos.html">PRODUTOS</a></div>
+                <div><a href="index.html">HOME</a></div>
+                <div id="icon"><a href="index.html"><img src="imgs/360x600.png" width="70 px" height="40px"></a></div>
         </container>
     </header>
     <main>
@@ -26,7 +26,7 @@
                 Basquete/Casual
                 <h1 id="canome">Tênis Air Jordan 1<br>
                     Mid Se Masculino</h1>
-                <input type="button" value="COMPRE AGORA ---" id="compra">
+                <input type="button" value="COMPRE AGORA &rarr;" id="compra">
             </div>
             <div>
                 <img src="https://images.lojanike.com.br/1024x1024/produto/tenis-nike-air-jordan-i-mid-unissex-554724-113-1.png" width="530 px" height="530px">
