--- a/produtos.html
+++ b/produtos.html
@@ -25,34 +25,40 @@
         <container id="calcados">
             <div>
                 <img src="https://images.lojanike.com.br/1024x1024/produto/tenis-nike-air-jordan-i-mid-unissex-554724-113-1.png">
-                <h3>NOME DO SAPATO</h3>
+                <h4>Tênis Air Jordan 1 Mid Se Masculino</h4>
                 <p>R$100.00</p>
             </div>
             <div>
                 <img src="https://images.lojanike.com.br/1024x1024/produto/tenis-nike-air-jordan-i-mid-unissex-554724-113-1.png">
-                <h3>nome do sapato</h3>
+                <h4>Tênis Air Jordan 1 Mid Se Masculino</h4>
+                <p>R$100.00</p>
             </div>
             <div>
                 <img src="https://images.lojanike.com.br/1024x1024/produto/tenis-nike-air-jordan-i-mid-unissex-554724-113-1.png">
-                <h3>nome do sapato</p>
+                <h4>Tênis Air Jordan 1 Mid Se Masculino</h4>
+                <p>R$100.00</p>
             </div>
             <div>
                 <img src="https://images.lojanike.com.br/1024x1024/produto/tenis-nike-air-jordan-i-mid-unissex-554724-113-1.png">
-                <h3>nome do sapato</h3>
+                <h4>Tênis Air Jordan 1 Mid Se Masculino</h4>
+                <p>R$100.00</p>
             </div>
             <div>
                 <img src="https://images.lojanike.com.br/1024x1024/produto/tenis-nike-air-jordan-i-mid-unissex-554724-113-1.png">
-                <h3>nome do sapato</h3>
+                <h4>Tênis Air Jordan 1 Mid Se Masculino</h4>
+                <p>R$100.00</p>
             </div>
             <div>
                 <img src="https://images.lojanike.com.br/1024x1024/produto/tenis-nike-air-jordan-i-mid-unissex-554724-113-1.png">
-                <h3>nome do sapato</h3>
+                <h4>Tênis Air Jordan 1 Mid Se Masculino</h4>
+                <p>R$100.00</p>
             </div>
             <div>
                 <img src="https://images.lojanike.com.br/1024x1024/produto/tenis-nike-air-jordan-i-mid-unissex-554724-113-1.png">
-                <h3>nome do sapato</h3>
+                <h4>Tênis Air Jordan 1 Mid Se Masculino</h4>
+                <p>R$100.00</p>
             </div>
-        </container>    
+        </container>
     </main>
 </body>
 </html>
