--- a/produtos.html
+++ b/produtos.html
@@ -17,46 +17,60 @@
                 <div>OFERTAS</div>
                 <div><a href="produtos.html">PRODUTOS</a></div>
                 <div><a href="index.html">HOME</a></div>
-                <div id="icon"><a href="index.html"><img src="imgs/360x600.png" width="70 px" height="40px"></a></div>
+                <div><a href="index.html"><img src="imgs/360x600.png" width="70 px" height="40px"></a></div>
         </container>
     </header>
     <main>
         <!--produtos-->
         <container id="calcados">
             <div>
-                <img src="https://images.lojanike.com.br/1024x1024/produto/tenis-nike-air-jordan-i-mid-unissex-554724-113-1.png">
-                <h4>Tênis Air Jordan 1 Mid Se Masculino</h4>
-                <p>R$100.00</p>
+                <a href="#">
+                    <img src="https://images.lojanike.com.br/1024x1024/produto/tenis-nike-air-jordan-i-mid-unissex-554724-113-1.png">
+                    <h4>Tênis Air Jordan 1 Mid Se Masculino</h4>
+                    <p>R$100.00</p>
+                </a>
             </div>
             <div>
-                <img src="https://images.lojanike.com.br/1024x1024/produto/tenis-nike-air-jordan-i-mid-unissex-554724-113-1.png">
-                <h4>Tênis Air Jordan 1 Mid Se Masculino</h4>
-                <p>R$100.00</p>
+                <a href="#">
+                    <img src="https://images.lojanike.com.br/1024x1024/produto/tenis-nike-air-jordan-i-mid-unissex-554724-113-1.png">
+                    <h4>Tênis Air Jordan 1 Mid Se Masculino</h4>
+                    <p>R$100.00</p>
+                </a>
             </div>
             <div>
-                <img src="https://images.lojanike.com.br/1024x1024/produto/tenis-nike-air-jordan-i-mid-unissex-554724-113-1.png">
-                <h4>Tênis Air Jordan 1 Mid Se Masculino</h4>
-                <p>R$100.00</p>
+                <a href="#">
+                    <img src="https://images.lojanike.com.br/1024x1024/produto/tenis-nike-air-jordan-i-mid-unissex-554724-113-1.png">
+                    <h4>Tênis Air Jordan 1 Mid Se Masculino</h4>
+                    <p>R$100.00</p>
+                </a>
             </div>
             <div>
-                <img src="https://images.lojanike.com.br/1024x1024/produto/tenis-nike-air-jordan-i-mid-unissex-554724-113-1.png">
-                <h4>Tênis Air Jordan 1 Mid Se Masculino</h4>
-                <p>R$100.00</p>
+                <a href="#">
+                    <img src="https://images.lojanike.com.br/1024x1024/produto/tenis-nike-air-jordan-i-mid-unissex-554724-113-1.png">
+                    <h4>Tênis Air Jordan 1 Mid Se Masculino</h4>
+                    <p>R$100.00</p>
+                </a>
             </div>
             <div>
-                <img src="https://images.lojanike.com.br/1024x1024/produto/tenis-nike-air-jordan-i-mid-unissex-554724-113-1.png">
-                <h4>Tênis Air Jordan 1 Mid Se Masculino</h4>
-                <p>R$100.00</p>
+                <a href="#">
+                    <img src="https://images.lojanike.com.br/1024x1024/produto/tenis-nike-air-jordan-i-mid-unissex-554724-113-1.png">
+                    <h4>Tênis Air Jordan 1 Mid Se Masculino</h4>
+                    <p>R$100.00</p>
+                </a>
             </div>
             <div>
-                <img src="https://images.lojanike.com.br/1024x1024/produto/tenis-nike-air-jordan-i-mid-unissex-554724-113-1.png">
-                <h4>Tênis Air Jordan 1 Mid Se Masculino</h4>
-                <p>R$100.00</p>
+                <a href="#">
+                    <img src="https://images.lojanike.com.br/1024x1024/produto/tenis-nike-air-jordan-i-mid-unissex-554724-113-1.png">
+                    <h4>Tênis Air Jordan 1 Mid Se Masculino</h4>
+                    <p>R$100.00</p>
+                </a>
             </div>
             <div>
-                <img src="https://images.lojanike.com.br/1024x1024/produto/tenis-nike-air-jordan-i-mid-unissex-554724-113-1.png">
-                <h4>Tênis Air Jordan 1 Mid Se Masculino</h4>
-                <p>R$100.00</p>
+                <a href="#">
+                    <img src="https://images.lojanike.com.br/1024x1024/produto/tenis-nike-air-jordan-i-mid-unissex-554724-113-1.png">
+                    <h4>Tênis Air Jordan 1 Mid Se Masculino</h4>
+                    <p>R$100.00</p>
+                </a>
             </div>
         </container>
     </main>
