Criação da página de login

--- a/produtos.html
+++ b/produtos.html
@@ -13,7 +13,7 @@
                 <div><img src="imgs/a.png" width="30 px" height="30px"></div>
                 <div><img src="imgs/gv.png" width="30 px" height="30px"></div>
                 <div><img src="imgs/logo+incones.png" width="30 px" height="30px"></div>
-                <div><img src="imgs/s.png" width="30px" height="30px"></div>
+                <div><a href="login.html"><img src="imgs/s.png" width="30px" height="30px"></a></div>
                 <div>OFERTAS</div>
                 <div><a href="produtos.html">PRODUTOS</a></div>
                 <div><a href="index.html">HOME</a></div>
