--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>SHOES</title>
+    <title>LOGIN</title>
 </head>
 <body>
     <header>
@@ -21,20 +21,19 @@
         </container>
     </header>
     <main>
-        <container id="produto">
+        <container id="login">
+            <div><img src="imgs/p.png" id="log"></div>
+            Faça seu login<br>
             <div>
-                Basquete/Casual
-                <h1 id="canome">Tênis Air Jordan 1<br>
-                    Mid Se Masculino</h1>
-                <input type="button" value="COMPRE AGORA &rarr;" id="compra">
-            </div>
-            <div>
-                <img src="https://images.lojanike.com.br/1024x1024/produto/tenis-nike-air-jordan-i-mid-unissex-554724-113-1.png" width="530 px" height="530px">
+                <form action="">
+                    E-mail:<br>
+                    <input type="text" name="" id=""><br>
+                    Senha:<br>
+                    <input type="text"><br>
+                    <input type="submit" value="Continuar" id="continuar">
+                </form>
             </div>
         </container>
-        <footer>
-
-        </footer>
     </main>
 </body>
 </html>
