Criação aba de carrinho

--- a/cadastro.html
+++ b/cadastro.html
@@ -27,32 +27,38 @@
             Faça seu login<br>
             <div>
                 <form action="">
+                    Nome:<br>
+                    <input type="text"><br>
                     E-mail:<br>
                     <input type="email" name="" id=""><br>
+                    CPF:<br>
+                    <input type="text"><br>
                     Senha:<br>
                     <input type="password"><br>
-                    <a href="cadastro.html">CADASTRE-SE</a>
+                    Confirme a Senha:<br>
+                    <input type="password"><br>
+                    <a href=""></a>
                     <input type="submit" value="Continuar" id="continuar">
                 </form>
             </div>
+            <div id="menu" class="menu effect">
+                <nav>
+                    <div class = "car">
+                        SEU CARRINHO
+                            <button id="btnclose" style="text-align: right;">X</button>
+                    </div>
+                    <ul>
+                        <li><a href="#">Frutas</a></li>
+                        <li><a href="#">Link aqui</a></li>
+                        <li><a href="#">Link aqui</a></li>
+                        <li><a href="#">Link aqui</a></li>
+                        <li><a href="#">Link aqui</a></li>
+                        <li><a href="#">Link aqui</a></li>
+                    </ul>
+                </nav>
+            </div>
         </container>
-        <div id="menu" class="menu effect">
-            <nav>
-                <div class = "car">
-                    SEU CARRINHO
-                        <button id="btnclose" style="text-align: right;">X</button>
-                </div>
-                <ul>
-                    <li><a href="#">Frutas</a></li>
-                    <li><a href="#">Link aqui</a></li>
-                    <li><a href="#">Link aqui</a></li>
-                    <li><a href="#">Link aqui</a></li>
-                    <li><a href="#">Link aqui</a></li>
-                    <li><a href="#">Link aqui</a></li>
-                </ul>
-            </nav>
-        </div>
+        <script src="js/menu.js"></script>
     </main>
-    <script src="js/menu.js"></script>
 </body>
 </html>
