--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/menu.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>SHOES</title>
 </head>
 <body>
     <header>
         <container id="cab">
                 <div><img src="imgs/a.png" width="30 px" height="30px"></div>
-                <div><img src="imgs/gv.png" width="30 px" height="30px"></div>
+                <div><button id="btncar"><img src="imgs/gv.png" width="30 px" height="30px"></button></div>
                 <div><img src="imgs/logo+incones.png" width="30 px" height="30px"></div>
                 <div><a href="login.html"><img src="imgs/s.png" width="30px" height="30px"></a></div>
-                <div>OFERTAS</div>
+                <div><a href="#">OFERTAS</a></div>
                 <div><a href="produtos.html">PRODUTOS</a></div>
                 <div><a href="index.html">HOME</a></div>
                 <div id="icon"><a href="index.html"><img src="imgs/360x600.png" width="70 px" height="40px"></a></div>
@@ -32,9 +33,25 @@
                 <img src="https://images.lojanike.com.br/1024x1024/produto/tenis-nike-air-jordan-i-mid-unissex-554724-113-1.png" width="530 px" height="530px">
             </div>
         </container>
-        <footer>
-
-        </footer>
+        <div id="menu" class="menu effect">
+            <nav>
+                <div class = "car">
+                    SEU CARRINHO
+                        <button id="btnclose" style="text-align: right;">X</button>
+                </div>
+                <ul>
+                    <li><a href="#">Frutas</a></li>
+                    <li><a href="#">Link aqui</a></li>
+                    <li><a href="#">Link aqui</a></li>
+                    <li><a href="#">Link aqui</a></li>
+                    <li><a href="#">Link aqui</a></li>
+                    <li><a href="#">Link aqui</a></li>
+                </ul>
+            </nav>
+        </div>
     </main>
+    <footer>
+    </footer>
+    <script src="js/menu.js"></script>
 </body>
 </html>
