Criação da tela de compra

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
         <container id="cab">
                 <div><img src="imgs/a.png" width="30 px" height="30px"></div>
                 <div><button id="btncar"><img src="imgs/gv.png" width="30 px" height="30px"></button></div>
-                <div><img src="imgs/logo+incones.png" width="30 px" height="30px"></div>
                 <div><a href="login.html"><img src="imgs/s.png" width="30px" height="30px"></a></div>
                 <div><a href="#">OFERTAS</a></div>
                 <div><a href="produtos.html">PRODUTOS</a></div>
@@ -27,7 +26,9 @@
                 Basquete/Casual
                 <h1 id="canome">Tênis Air Jordan 1<br>
                     Mid Se Masculino</h1>
-                <input type="button" value="COMPRE AGORA &rarr;" id="compra">
+                <a href="compra.html">
+                    <input type="button" value="COMPRE AGORA &rarr;" id="compra">
+                </a>
             </div>
             <div>
                 <img src="https://images.lojanike.com.br/1024x1024/produto/tenis-nike-air-jordan-i-mid-unissex-554724-113-1.png" width="530 px" height="530px">
@@ -50,7 +51,9 @@
             </nav>
         </div>
     </main>
-    <footer>
+    <br><br><br>
+    <footer id="rodape">
+        <iframe src="footer.html" scrolling="no" name="myIFrame" frameborder="0" id="frame"></iframe>
     </footer>
     <script src="js/menu.js"></script>
 </body>
