--- a/produtos.html
+++ b/produtos.html
@@ -13,12 +13,11 @@
         <container id="cab">
                 <div><img src="imgs/a.png" width="30 px" height="30px"></div>
                 <div><button id="btncar"><img src="imgs/gv.png" width="30 px" height="30px"></button></div>
-                <div><img src="imgs/logo+incones.png" width="30 px" height="30px"></div>
                 <div><a href="login.html"><img src="imgs/s.png" width="30px" height="30px"></a></div>
                 <div>OFERTAS</div>
                 <div><a href="produtos.html">PRODUTOS</a></div>
                 <div><a href="index.html">HOME</a></div>
-                <div><a href="index.html"><img src="imgs/360x600.png" width="70 px" height="40px"></a></div>
+                <div id="icon" style="margin-right: 50%;"><a href="index.html"><img src="imgs/360x600.png" width="70 px" height="40px"></a></div>
         </container>
     </header>
     <main>
@@ -91,6 +90,10 @@
             </nav>
         </div>
     </main>
+    <br><br><br>
+    <footer id="rodape">
+        <iframe src="footer.html" scrolling="no" name="myIFrame" frameborder="0" id="frame"></iframe>
+    </footer>
     <script src="js/menu.js"></script>
 </body>
 </html>
