--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
 <body>
     <header>
         <container id="cab">
-                <div><img src="imgs/a.png" width="30 px" height="30px"></div>
+            <form action="" id="busca">
+                <input type="text" style="margin-right: 10px;" id="inpbus" placeholder="Pesquisar">
+                <input type="submit" value="Buscar" id="btnbus">
+              </form>
                 <div><button id="btncar"><img src="imgs/gv.png" width="30 px" height="30px"></button></div>
-                <div><a href="login.html"><img src="imgs/s.png" width="30px" height="30px"></a></div>
-                <div><a href="#">OFERTAS</a></div>
+                <div id='perfil'><img src="imgs/s.png" width="30px" height="30px"></div>
+                <div><a href="file:///C:/Users/joeli/Desktop/JO%C3%89LIO/Infor3/Loja_de_calcados/produtos.html#ofertas">OFERTAS</a></div>
                 <div><a href="produtos.html">PRODUTOS</a></div>
                 <div><a href="index.html">HOME</a></div>
                 <div id="icon"><a href="index.html"><img src="imgs/360x600.png" width="70 px" height="40px"></a></div>
@@ -34,23 +37,76 @@
                 <img src="https://images.lojanike.com.br/1024x1024/produto/tenis-nike-air-jordan-i-mid-unissex-554724-113-1.png" width="530 px" height="530px">
             </div>
         </container>
-        <div id="menu" class="menu effect">
-            <nav>
-                <div class = "car">
-                    SEU CARRINHO
-                        <button id="btnclose" style="text-align: right;">X</button>
-                </div>
-                <ul>
-                    <li><a href="#">Frutas</a></li>
-                    <li><a href="#">Link aqui</a></li>
-                    <li><a href="#">Link aqui</a></li>
-                    <li><a href="#">Link aqui</a></li>
-                    <li><a href="#">Link aqui</a></li>
-                    <li><a href="#">Link aqui</a></li>
-                </ul>
-            </nav>
-        </div>
+        <h1 class="prod" id="ofertas">Destaque: <hr></h1>
+        <container id="calcados" style="grid-template-columns: repeat(5, 1fr);">
+            <div>
+                <a href= "compra.html">
+                    <img src="https://images.lojanike.com.br/1024x1024/produto/tenis-nike-air-jordan-i-mid-unissex-554724-113-1.png">
+                    <h4>Tênis Air Jordan 1 Mid Se Masculino</h4>
+                    <p>R$100.00 (-10%)</p>
+                    <!--(-x%)-->
+                </a>
+            </div>
+            <div>
+                <a href= "compra.html">
+                    <img src="https://images.lojanike.com.br/1024x1024/produto/tenis-nike-air-jordan-i-mid-unissex-554724-113-1.png">
+                    <h4>Tênis Air Jordan 1 Mid Se Masculino</h4>
+                    <p>R$100.00 (-10%)</p>
+                    <!--(-x%)-->
+                </a>
+            </div>
+            <div>
+                <a href= "compra.html">
+                    <img src="https://images.lojanike.com.br/1024x1024/produto/tenis-nike-air-jordan-i-mid-unissex-554724-113-1.png">
+                    <h4>Tênis Air Jordan 1 Mid Se Masculino</h4>
+                    <p>R$100.00 (-10%)</p>
+                    <!--(-x%)-->
+                </a>
+            </div>
+            <div>
+                <a href= "compra.html">
+                    <img src="https://images.lojanike.com.br/1024x1024/produto/tenis-nike-air-jordan-i-mid-unissex-554724-113-1.png">
+                    <h4>Tênis Air Jordan 1 Mid Se Masculino</h4>
+                    <p>R$100.00 (-10%)</p>
+                    <!--(-x%)-->
+                </a>
+            </div>
+            <button id="btnmais"><a href="produtos.html">
+                <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" fill= "black" x="0px" y="0px"
+	 width="55px" height="55px" viewBox="0 0 306 306" style="enable-background:new 0 0 306 306;" xml:space="preserve">
+	<g id="keyboard-arrow-right">
+		<polygon points="58.65,267.75 175.95,153 58.65,35.7 94.35,0 247.35,153 94.35,306"/>
+	</g>
+                </svg>
+            </a>
+            </button>
+        </container>
     </main>
+    <div id="menu" class="menu effect">
+        <nav>
+            <div class = "car">
+                <span id="namecar">SEU CARRINHO</span>
+                <button id="btnclose">X</button>
+            </div>
+            <ul>
+                <li><a href="#">Frutas</a></li>
+                <li><a href="#">Link aqui</a></li>
+                <li><a href="#">Link aqui</a></li>
+                <li><a href="#">Link aqui</a></li>
+                <li><a href="#">Link aqui</a></li>
+                <li><a href="#">Link aqui</a></li>
+            </ul>
+        </nav>
+    </div>
+    <div id="modal-perfil" class="modal-container">
+        <div class="modal">
+            <button id="btnfechar">x</button>
+            <div><img src="imgs/p.png" width="150px" height="150px"></div>
+            <div><hr><h2 style="font-size: 20pt; margin: 10px;">Joélio Pinheiro</h2></div>
+            <div><hr><h2 style="font-size: 15pt; margin: 15px;">joeliopinheiro10@gmail.com</h2><hr></div>
+            <button id="btnpro">SAIR</button>
+        </div>
+    </div>
     <br><br><br>
     <footer id="rodape">
         <iframe src="footer.html" scrolling="no" name="myIFrame" frameborder="0" id="frame"></iframe>
