--- a/login.html
+++ b/login.html
@@ -11,13 +11,16 @@
 <body>
     <header>
         <container id="cab">
-                <div><img src="imgs/a.png" width="30 px" height="30px"></div>
+            <form action="" id="busca">
+                <input type="text" style="margin-right: 10px;" id="inpbus" placeholder="Pesquisar">
+                <input type="submit" value="Buscar" id="btnbus">
+              </form>
                 <div><button id="btncar"><img src="imgs/gv.png" width="30 px" height="30px"></button></div>
                 <div><a href="login.html"><img src="imgs/s.png" width="30px" height="30px"></a></div>
-                <div>OFERTAS</div>
+                <div><a href="file:///C:/Users/joeli/Desktop/JO%C3%89LIO/Infor3/Loja_de_calcados/produtos.html#ofertas">OFERTAS</a></div>
                 <div><a href="produtos.html">PRODUTOS</a></div>
                 <div><a href="index.html">HOME</a></div>
-                <div id="icon" style="margin-right: 50%;"><a href="index.html"><img src="imgs/360x600.png" width="70 px" height="40px"></a></div>
+                <div id="icon" style="margin-right: 30%;"><a href="index.html"><img src="imgs/360x600.png" width="70 px" height="40px"></a></div>
         </container>
     </header>
     <main>
@@ -25,11 +28,11 @@
             <div><img src="imgs/p.png" id="log"></div>
             Faça seu login<br>
             <div>
-                <form action="">
+                <form action="perfil.html">
                     E-mail:<br>
-                    <input type="email" name="" id=""><br>
+                    <input type="email" name="" id="" required><br>
                     Senha:<br>
-                    <input type="password"><br>
+                    <input type="password" required><br>
                     <a href="cadastro.html">CADASTRE-SE</a>
                     <input type="submit" value="Continuar" id="continuar">
                 </form>
@@ -38,8 +41,8 @@
         <div id="menu" class="menu effect">
             <nav>
                 <div class = "car">
-                    SEU CARRINHO
-                        <button id="btnclose" style="text-align: right;">X</button>
+                    <span id="namecar">SEU CARRINHO</span>
+                    <button id="btnclose">X</button>
                 </div>
                 <ul>
                     <li><a href="#">Frutas</a></li>
