--- a/login.html
+++ b/login.html
@@ -18,9 +18,9 @@
                 <div><button id="btncar"><img src="imgs/gv.png" width="30 px" height="30px"></button></div>
                 <div><a href="login.html"><img src="imgs/s.png" width="30px" height="30px"></a></div>
                 <div><a href="file:///C:/Users/joeli/Desktop/JO%C3%89LIO/Infor3/Loja_de_calcados/produtos.html#ofertas">OFERTAS</a></div>
-                <div><a href="produtos.html">PRODUTOS</a></div>
-                <div><a href="index.html">HOME</a></div>
-                <div id="icon" style="margin-right: 30%;"><a href="index.html"><img src="imgs/360x600.png" width="70 px" height="40px"></a></div>
+                <div><a href="produtos.php">PRODUTOS</a></div>
+                <div><a href="index.php">HOME</a></div>
+                <div id="icon" style="margin-right: 30%;"><a href="index.php"><img src="imgs/360x600.png" width="70 px" height="40px"></a></div>
         </container>
     </header>
     <main>
@@ -28,12 +28,12 @@
             <div><img src="imgs/p.png" id="log"></div>
             Faça seu login<br>
             <div>
-                <form action="perfil.html">
+                <form action="autorizacao.php" method="POST">
                     E-mail:<br>
-                    <input type="email" name="" id="" required><br>
+                    <input type="email" name="email" id="" required><br>
                     Senha:<br>
-                    <input type="password" required><br>
-                    <a href="cadastro.html">CADASTRE-SE</a>
+                    <input name ="senha" type="password" required><br>
+                    <a href="cadastro.php">CADASTRE-SE</a>
                     <input type="submit" value="Continuar" id="continuar">
                 </form>
             </div>
@@ -56,8 +56,9 @@
         </div>
     </main>
     <br><br><br>
-    <footer id="rodape">
+    <footer id="rodape" style="position: relative;">
         <iframe src="footer.html" scrolling="no" name="myIFrame" frameborder="0" id="frame"></iframe>
+        <div id="final"></div>
     </footer>
     <script src="js/menu.js"></script>
 </body>
