--- a/login.html
+++ b/login.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preload" href="css/style.css" as="style">
+    <link rel="preload" href="css/menu.css" as="style">
     <link rel="stylesheet" href="css/menu.css">
     <link rel="stylesheet" href="css/style.css">
     <title>LOGIN</title>
 </head>
 <body>
     <header>
+        <div id="icon"><a href="index.php"><img src="imgs/360x600.png" width="70 px" height="40px"></a></div>
         <container id="cab">
             <form action="" id="busca">
                 <input type="text" style="margin-right: 10px;" id="inpbus" placeholder="Pesquisar">
@@ -20,7 +23,14 @@
                 <div><a href="produtos.php?#ofertas">OFERTAS</a></div>
                 <div><a href="produtos.php">PRODUTOS</a></div>
                 <div><a href="index.php">HOME</a></div>
-                <div id="icon" style="margin-right: 30%;"><a href="index.php"><img src="imgs/360x600.png" width="70 px" height="40px"></a></div>
+                <style>
+                    #icon{
+                        position: absolute;
+                        margin: 13px;
+                        top: 0;
+                        left: 0;
+                    }
+                </style>
         </container>
     </header>
     <main>
@@ -28,13 +38,13 @@
             <div><img src="imgs/p.png" id="log"></div>
             Faça seu login<br>
             <div>
-                <form action="autorizacao.php" method="POST">
-                    E-mail:<br>
-                    <input type="email" name="email" id="" required><br>
-                    Senha:<br>
-                    <input name ="senha" type="password" required><br>
+                <form action="autorizacao.php" method="POST" class="login">
+                    <h4 style="font-size: 20px;">E-mail:</h4>
+                    <input type="email" name="email" id="inpbus" required placeholder="E-mail" style="outline: unset; border: 1px solid #646f83; border-radius: 26px;font-size: inherit; height: 40px; width: 250px; font-size: 20px;"><br>
+                    <h4 style="font-size: 20px;">Senha:</h4>
+                    <input name ="senha" type="password" id="inpbus" required placeholder="Senha" style="outline: unset; border: 1px solid #646f83; border-radius: 26px;font-size: inherit; height: 40px; width: 250px; font-size: 20px;"><br>
                     <a href="cadastro.php">CADASTRE-SE</a>
-                    <input type="submit" value="Continuar" id="continuar">
+                    <input type="submit" value="Continuar" id="continuar" style="outline: unset; border: 1px solid #646f83; border-radius: 26px;font-size: inherit; background-color: black; color: white; height: 45px; width: 100px; font-size: 20px;">
                 </form>
             </div>
         </container>
